[metadata]
name = yum
#version = 0.1
author = Red Hat
url = https://gitlab.com/KOLANICH/rdfind.py
description = A package management tool for the distros using RPM
long_description = file: README.md
keywords = rpm
license = GPLv2+
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Environment :: Other Environment
	Intended Audience :: Developers
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
use_2to3 = True
zip_safe = True
install_requires = rpm, urlgrabber @ git+https://github.com/rpm-software-management/urlgrabber.git, yum-metadata-parser @ git+https://github.com/rpm-software-management/yum-metadata-parser.git
packages = yum, rpmUtils, yum-cli
setup_requires = setuptools_scm;
scripts = 
	bin/yum-updatesd.py
	bin/yum